--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,7 @@
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: bottom center;
+    //background-attachment: fixed;
   }
 
   .btn-shadow {
